(feat): manual teams and team settings
